Switch to OpenAPI, React client WIP
