# server/database/repository.py
@@ -3,13 +3,17 @@ from sqlalchemy.orm import Session
 
 from .connector import engine
 from .tables import Chapter, Checkpoint, Room
-# from .generated.openapi_server.models import Chapter
+# from generated.openapi_server.models import Chapter
 
 
 def get_chapters():
     with Session(engine) as session:
         chapters = session.scalars(select(Chapter))
-        return [{'token': chapter.token, 'name': chapter.full_name} for chapter in chapters]
+        return [{
+            'token': chapter.token,
+            'name': chapter.full_name,
+            'image': chapter.image,
+        } for chapter in chapters]
 
 
 def get_checkpoints(chapter_token: str):
@@ -18,7 +22,8 @@ def get_checkpoints(chapter_token: str):
                                       .join(Checkpoint.chapter.and_(Chapter.token == chapter_token)))
         return [{
             'token': checkpoint.token,
-            'name': checkpoint.name
+            'name': checkpoint.name,
+            'image': checkpoint.image,
         } for checkpoint in checkpoints]
 
 
@@ -26,7 +31,10 @@ def get_rooms(checkpoint_token: str):
     with Session(engine) as session:
         rooms = session.scalars(select(Room)
                                 .join(Room.checkpoint.and_(Checkpoint.token == checkpoint_token)))
-        return [room.code for room in rooms]
+        return [{
+            'code': room.code,
+            'image': room.image,
+        } for room in rooms]
 
 
 def get_strats_for_room(chapter_token: str, room: str) -> list[dict]:
